welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:7: error: value =- is not a member of Int
		else y=-1
                      ^